--- a/godot/rust/Cargo.toml
+++ b/godot/rust/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version = "1.28.1", features = ["full"] }
 serde_json = "1.0.96"
 serde = "1.0.163"
 futures = "0.3.28"
+openssl = "0.10.52"
